--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   ],
   "scripts": {
     "build": "tsup",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "format-check": "prettier  \"src/**/*.ts\" \"test/**/*.ts\" --check",
-    "lint": "eslint \"{src}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format-check": "prettier  \"src/**/*.ts\" --check",
+    "lint": "eslint \"src/**/*.ts\" --fix",
+    "prepare": "husky",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -29,10 +30,10 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
-    "eslint": "^9.15.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.7",
+    "husky": "^9.0.11",
     "prettier": "^3.3.3",
     "prettier-plugin-packagejson": "^2.5.3",
     "prettier-plugin-sort-json": "^4.0.0",
