--- a/package.json
+++ b/package.json
@@ -25,15 +25,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.4.8",
+    "@nestjs/mapped-types": "^2.0.6",
     "openapi-client-axios": "^7.5.5"
   },
   "devDependencies": {
+    "@nestjs/cli": "^10.4.7",
+    "@nestjs/testing": "^10.4.8",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.9",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "prettier-plugin-packagejson": "^2.5.3",
     "prettier-plugin-sort-json": "^4.0.0",
