--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": false,
   "keywords": [
-    "nest",
+    "nestjs",
     "open-api",
     "axios",
     "openapi-client-axios"
